--- a/app/src/main/res/layout/buttons_view.xml
+++ b/app/src/main/res/layout/buttons_view.xml
@@ -12,10 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:enabled="true"
         android:text="@string/nav_help"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/btn_settings"
-        app:layout_constraintHorizontal_weight="4"
+        app:layout_constraintHorizontal_weight="6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,7 +27,7 @@
         android:text="@string/nav_settings"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_weight="5"
+        app:layout_constraintHorizontal_weight="7"
         app:layout_constraintStart_toEndOf="@+id/btn_help"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,10 +35,11 @@
         android:id="@+id/btn_resize"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:enabled="false"
         android:text="@string/nav_resize"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_weight="5"
+        app:layout_constraintHorizontal_weight="7"
         app:layout_constraintStart_toEndOf="@+id/btn_timer"
         app:layout_constraintTop_toBottomOf="@+id/btn_settings" />
 
@@ -50,7 +52,7 @@
         android:text="@string/nav_timer"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/btn_resize"
-        app:layout_constraintHorizontal_weight="4"
+        app:layout_constraintHorizontal_weight="6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_help" />
 
