--- a/app/src/main/res/layout/timer_settings.xml
+++ b/app/src/main/res/layout/timer_settings.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/timer_dur_fps"
+            android:inputType="text"
             android:selectAllOnFocus="false"
             android:singleLine="true"
             app:textInputLayoutFocusedRectEnabled="true" />
@@ -48,6 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/dimension"
+            android:inputType="text"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
