--- a/app/src/main/res/layout/main_settings.xml
+++ b/app/src/main/res/layout/main_settings.xml
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/net_width"
-            android:inputType="number"
+            android:inputType="numberSigned|number"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
