fixed bug with set func

--- a/app/src/main/res/layout/helper_element.xml
+++ b/app/src/main/res/layout/helper_element.xml
@@ -9,6 +9,8 @@
         android:id="@+id/element_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:lines="1"
         android:text="Title"
         android:textColor="@color/main_color"
@@ -20,8 +22,10 @@
         android:id="@+id/element_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="Content"
         android:textColor="@color/main_color"
         android:textSize="18sp"
