--- a/app/src/main/res/layout/implicit_settings.xml
+++ b/app/src/main/res/layout/implicit_settings.xml
@@ -66,8 +66,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:enabled="false"
+        android:enabled="true"
         android:text="@string/save_picture"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />
